# depth_color_alignment

./: .gitignore  CMakeLists.txt  README.md  depth2colorAlign.cpp  depth2colorAlign.h  depth_align_to_color.vcxproj  registration.cpp
