cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -g -ftest-coverage -fprofile-arcs")
project( Color_Depth_Registration )
find_package(OpenCV REQUIRED)
add_executable( Color_Depth_Registration registration.cpp depth2colorAlign.cpp depth2colorAlign.h)
target_link_libraries( Color_Depth_Registration ${OpenCV_LIBS})
